Now filters by name.

--- a/starter-code/src/index.css
+++ b/starter-code/src/index.css
@@ -4,9 +4,9 @@ body {
   font-family: sans-serif;
 }
 .box {
-  width: 450px;
+  width: 500px;
 }
-.App {
+.content {
   display: flex;
 }
 .todaysFood {
